Added a way to have an inline select like Polaris 3

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "url": "https://github.com/EastsideCo/polaris-vue.git"
   },
   "keywords": [],
-  "author": "ESC Apps Team <apps@eastsideco.com>",
+  "author": "ESC Apps Team <support@appydesign.co.uk>",
   "license": "MIT",
   "dependencies": {
     "change-case": "^3.0.1",
