--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@appydesign/polaris-vue",
-    "version": "0.1.24",
+    "version": "0.1.25",
     "description": "Shopify Polaris for Vue 2",
     "main": "lib/polaris-vue.min.js",
     "scripts": {
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "change-case": "^3.1.0",
+        "drop-console-webpack-plugin": "^3.0.2",
         "sass": "^1.43.4",
         "sass-loader": "^7.0.3"
     },
