--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
     "name": "@appydesign/polaris-vue",
-    "version": "0.1.25",
+    "version": "0.1.27",
     "description": "Shopify Polaris for Vue 2",
     "main": "lib/polaris-vue.min.js",
     "scripts": {
         "build": "webpack --env build",
-        "dev": "webpack --progress --colors --watch --env dev",
+        "dev": "webpack --progress --watch --env dev",
         "test": "mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
         "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
     },
     "dependencies": {
         "change-case": "^3.1.0",
         "drop-console-webpack-plugin": "^3.0.2",
+        "node-sass": "^4.14.1",
         "sass": "^1.43.4",
-        "sass-loader": "^7.0.3"
+        "sass-loader": "^7.3.1"
     },
     "devDependencies": {
         "babel-cli": "6.24.1",
@@ -26,13 +27,15 @@
         "css-loader": "^0.28.11",
         "eslint": "3.19.0",
         "eslint-loader": "1.7.1",
-        "extract-text-webpack-plugin": "^3.0.2",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "mini-css-extract-plugin": "^1.6.2",
         "mocha": "6.2.3",
         "style-loader": "^0.18.2",
         "svg-inline-loader": "^0.8.2",
         "vue-loader": "^14.2.4",
         "vue-template-compiler": "^2.6.14",
-        "webpack": "3.1.0",
+        "webpack": "4.46.0",
+        "webpack-cli": "^4.9.1",
         "yargs": "7.1.0"
     },
     "repository": {
