--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "drop-console-webpack-plugin": "^3.0.2",
         "node-sass": "^4.14.1",
         "sass": "^1.43.4",
-        "sass-loader": "^7.3.1"
+        "sass-loader": "^7.3.1",
+        "vue-observe-visibility": "^1.0.0"
     },
     "devDependencies": {
         "babel-cli": "6.24.1",
