--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "svg-inline-loader": "^0.8.2",
         "vue-loader": "^14.2.4",
         "vue-template-compiler": "^2.6.14",
-        "webpack": "4.46.0",
-        "webpack-cli": "^4.9.1",
+        "webpack": "^5.0.0",
+        "webpack-cli": "^4.10.0",
         "yargs": "7.1.0"
     },
     "repository": {
