--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     },
     "devDependencies": {
         "babel-cli": "6.24.1",
-        "babel-core": "6.24.1",
+        "@babel/core": "7.1.6",
+        "@babel/preset-env": "^7.1.6",
         "babel-eslint": "7.2.3",
-        "babel-loader": "^7.1.5",
+        "babel-loader": "^8.0.0",
         "babel-plugin-add-module-exports": "0.2.1",
         "babel-preset-es2015": "6.24.1",
         "chai": "3.5.0",
         "css-loader": "^0.28.11",
         "eslint": "3.19.0",
         "eslint-loader": "1.7.1",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "mini-css-extract-plugin": "^1.6.2",
         "mocha": "6.2.3",
         "style-loader": "^0.18.2",
