--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["@babel/env"],
-  "plugins": ["babel-plugin-add-module-exports"]
+  "presets": [["@babel/env", { "modules": "commonjs" }]],
+  "plugins": ["add-module-exports"]
 }
