--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "babel-cli": "6.24.1",
         "babel-eslint": "7.2.3",
         "babel-loader": "^8.0.0",
-        "babel-plugin-add-module-exports": "0.2.1",
+        "babel-plugin-add-module-exports": "^0.2.1",
         "babel-preset-es2015": "6.24.1",
         "chai": "3.5.0",
         "css-loader": "^0.28.11",
